--- a/README.org
+++ b/README.org
@@ -1,10 +1,11 @@
-# Zettelkasten Repository
+#+TITLE: Zettelkasten Repository
+#+AUTHOR: Atri Hegde
 
 This repository houses a lot of random posts and thoughts that I want to record,
 but does not fall under any one category. Things ranging from code snippets, to
 cli tool guides, to even language rants.
 
-## Disclaimer
+** Disclaimer
 
 Just because I have said something in this repository does not mean
 I still share the same opinion about it!
